--- a/vignettes/RGC_Tutorial.Rmd
+++ b/vignettes/RGC_Tutorial.Rmd
@@ -8,10 +8,11 @@ output:
   pdf_document: default
 vignette: |
   %\VignetteIndexEntry{An introduction to ascend - Processing and analysis of retinal ganglion cells} 
-  %\VignetteEngine{knitr::rmarkdown} %\VignetteEncoding{UTF-8}
+  %\VignetteEngine{knitr::rmarkdown} 
+  %\VignetteEncoding{UTF-8}
 ---
 ```{r Loadascend, message = FALSE, echo = FALSE}
-devtools::load_all("/Users/a.senabouth/CodeRepositories/ascend-dev")
+devtools::load_all("/Users/a.senabouth/CodeRepositories/ascend")
 ```
 The `ascend` package provides a series of tools for the processing and analysis of single cell RNA-seq (scRNA-seq) in R. These tools perform tasks such as filtering, normalisation, clustering and differential expression.
 
